--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
 	"dependencies": {
 		"next": "^13.0.7",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"styled-components": "^5.3.6"
 	},
 	"devDependencies": {
 		"@types/node": "18.11.15",
 		"@types/react": "18.0.26",
+		"@types/styled-components": "^5.1.26",
 		"typescript": "4.9.4"
 	}
 }
